quest-iac/quest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quest
spec:
  selector:
    app: quest
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
